[AI Fix] (a11y ADA compliance): set post-meta text color to #757575 for WCAG contrast

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -225,7 +225,7 @@
 
 .post-meta {
   font-size: $small-font-size;
-  color: $grey-color;
+  color: #757575;
 }
 
 .post-link {
